# fragile

./: .apas  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  PLAN_CLANG_RUSTC_INTEGRATION.md  PLAN_CPP20_MAKO.md  PLAN_GO_SUPPORT.md  README.md  TODO.md  fragile.toml  rust_out
.github/workflows/: ci.yml
crates/fragile-build/: Cargo.toml
crates/fragile-build/src/: compile_commands.rs  config.rs  error.rs  lib.rs
crates/fragile-clang/: Cargo.toml
crates/fragile-clang/examples/: convert_factorial.rs  debug_ast.rs  debug_default_arg.rs  debug_specialization.rs  debug_types.rs  debug_types3.rs  debug_virtual_call.rs  parse_doctest.rs  test_mako_files.rs  test_rrr_files.rs  test_single_file.rs  test_vector_parse.rs  transpile.rs
crates/fragile-clang/src/: ast.rs  ast_codegen.rs  convert.rs  deduce.rs  lib.rs  parse.rs  resolve.rs  types.rs
crates/fragile-clang/stubs/: algorithm  array  assert.h  atomic  cassert  cctype  cerrno  chrono  cinttypes  climits  cmath  concepts  condition_variable  coroutine  csignal  cstdarg  cstddef  cstdint  cstdio  cstdlib  cstring  ctime  ctype.h  cxxabi.h  deque  dirent.h  endian.h  errno.h  exception  execinfo.h  fcntl.h  filesystem  fnmatch.h  fstream  functional  future  getopt.h  initializer_list  inttypes.h  iomanip  (+55 more)
crates/fragile-clang/stubs/arpa/: inet.h
crates/fragile-clang/stubs/asm-generic/: mman.h
crates/fragile-clang/stubs/boost/: any.hpp  filesystem.hpp  foreach.hpp  unordered_map.hpp
crates/fragile-clang/stubs/boost/algorithm/: string.hpp
crates/fragile-clang/stubs/event2/: event.h  thread.h
crates/fragile-clang/stubs/gflags/: gflags.h
crates/fragile-clang/stubs/google/protobuf/: message.h
crates/fragile-clang/stubs/gperftools/: profiler.h
crates/fragile-clang/stubs/netinet/: in.h  ip.h  tcp.h  udp.h
crates/fragile-clang/stubs/rocksdb/: write_batch.h
crates/fragile-clang/stubs/sys/: epoll.h  ioctl.h  mman.h  resource.h  select.h  socket.h  stat.h  time.h  types.h  uio.h  un.h  utsname.h  wait.h
crates/fragile-clang/stubs/yaml-cpp/: yaml.h
crates/fragile-clang/tests/: grammar_tests.rs  integration_test.rs
crates/fragile-cli/: Cargo.toml
crates/fragile-cli/src/: main.rs
crates/fragile-codegen/: Cargo.toml
crates/fragile-codegen/src/: codegen.rs  lib.rs
crates/fragile-common/: Cargo.toml
crates/fragile-common/src/: diagnostic.rs  lib.rs  source.rs  span.rs  symbol.rs
crates/fragile-driver/: Cargo.toml
crates/fragile-driver/src/: lib.rs
crates/fragile-frontend-cpp/: Cargo.toml
crates/fragile-frontend-cpp/src/: lib.rs  lower.rs  parser.rs
crates/fragile-frontend-go/: Cargo.toml
crates/fragile-frontend-go/src/: lib.rs  lower.rs  parser.rs
crates/fragile-frontend-rust/: Cargo.toml
crates/fragile-frontend-rust/src/: lib.rs  lower.rs  parser.rs
crates/fragile-hir/: Cargo.toml
crates/fragile-hir/src/: expr.rs  item.rs  lib.rs  module.rs  stmt.rs  types.rs
crates/fragile-runtime/: Cargo.toml
crates/fragile-runtime/src/: atomic.rs  exceptions.rs  lib.rs  memory.rs  pthread.rs  pthread_cond.rs  pthread_mutex.rs  pthread_rwlock.rs  rtti.rs  stdio.rs  vtable.rs
crates/fragile-rustc-driver/: Cargo.toml  build.rs
crates/fragile-rustc-driver/src/: build_integration.rs  cpp_compiler.rs  driver.rs  lib.rs  mir_convert.rs  queries.rs  rustc_integration.rs  stubs.rs
docs/: fragile-book.md  transpiler-status.md
docs/dev/: investigation_vector_25_errors.md  plan_12_1_2_coroutine_promise_types.md  plan_12_2_3_generator_state_machine.md  plan_13_1_3_flatten_anonymous_struct.md  plan_14_1_2_bit_field_packing.md  plan_14_2_1_bit_field_accessors.md  plan_16_3_dynamic_cast_improvements.md  plan_17_2_array_placement_new.md  plan_18_1_cpp20_modules_analysis.md  plan_1_3_end_to_end_add_cpp.md  plan_21_1_dead_code_elimination.md  plan_22_13_3_pthread_wrappers.md  plan_22_15_2_std_string_test.md  plan_22_15_3_std_map_test.md  plan_22_15_4_smart_ptr_test.md  plan_22_15_5_stl_algorithms_test.md  plan_22_3_libc++_setup.md  plan_22_4_vendored_libcxx_config.md  plan_22_5_libcxx_categorization.md  plan_22_remove_stl_mappings.md  plan_23_11_1_single_file_test.md  plan_23_11_2_small_projects.md  plan_23_11_3_medium_projects.md  plan_23_1_2_diagnostic_mode.md  plan_23_8_namespace_merging.md  plan_25_1_vtable_data_structures.md  plan_25_2_parse_virtual_methods.md  plan_25_3_generate_vtable_structs.md  plan_25_7_vtable_dispatch.md  plan_25_9_dynamic_cast_rtti.md  plan_2_1_2_float_literals.md  plan_2_1_integer_literals.md  plan_2_4_2_pointers.md  plan_2_4_4_arrays.md  plan_3_1_2_field_access.md  plan_3_1_3_init_list.md  plan_3_3_4_dynamic_dispatch.md  plan_8_3_1_variant_type_mapping.md  plan_8_3_2_variant_enum_generation.md  plan_8_3_3_variant_construction.md  (+68 more)
tests/clang_integration/: add.cpp  call.cpp  concepts.cpp  factorial.cpp  mako_simple.cpp  namespace_resolution.cpp  strop_minimal.cpp  strop_stl.cpp  test_format_decimal_harness.cpp  test_logging_harness.cpp  test_strop_harness.cpp  test_threading_harness.cpp  unittest_minimal.cpp  virtual_class.cpp  virtual_diamond.cpp
tests/cpp/: add_simple.cpp  class.cpp  constructor.cpp  doctest_simple.cpp  factorial.cpp  hello.cpp  namespace.cpp
tests/cpp/grammar/: 01_arithmetic.cpp  02_comparisons.cpp  03_logical.cpp  04_bitwise.cpp  05_if_else.cpp  06_while_loop.cpp  07_for_loop.cpp  17_arrays.cpp  (+12 more)
tests/e2e/: deref_postinc.cpp
tests/go/: hello.go
tests/rust/: hello.rs
tests/std/: 01_primitive.cpp  01_primitive.rs  02_extern.cpp  02_extern.rs  03_struct.cpp  03_struct.rs  04_impl.rs  04_method.cpp  05_generic.rs  05_template.cpp  10_match.rs  11_generic.rs  12_generic_struct.rs  13_trait.rs  14_monomorphization.rs  15_use.rs  16_mod.rs  17_visibility.rs  18_closure.rs  19_const_static.rs  20_type_alias.rs  21_associated_type.rs  22_unsafe.rs  23_raw_pointer.rs  24_slice.rs  25_array_expr.rs  26_range.rs  27_core_patterns.rs  28_loop_break.rs  29_loop_conditional.rs  30_for_loop.rs  31_pattern_struct.rs  32_references.rs  33_enum_data.rs  34_mut_ref.rs  35_enum_match.rs  36_enum_data_match.rs  37_module_call.rs  38_generic_enum.rs  39_generic_result.rs  (+7 more)
