[workspace]
resolver = "2"
members = [
    "crates/fragile-cli",
    "crates/fragile-driver",
    "crates/fragile-common",
    "crates/fragile-hir",
    "crates/fragile-frontend-rust",
    "crates/fragile-frontend-cpp",
    "crates/fragile-frontend-go",
    "crates/fragile-codegen",
    # New crates for Clang + rustc integration
    "crates/fragile-clang",
    "crates/fragile-rustc-driver",
    "crates/fragile-runtime",
    "crates/fragile-build",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
fragile-common = { path = "crates/fragile-common" }
fragile-hir = { path = "crates/fragile-hir" }
fragile-frontend-rust = { path = "crates/fragile-frontend-rust" }
fragile-frontend-cpp = { path = "crates/fragile-frontend-cpp" }
fragile-frontend-go = { path = "crates/fragile-frontend-go" }
fragile-codegen = { path = "crates/fragile-codegen" }
fragile-driver = { path = "crates/fragile-driver" }
# New crates for Clang + rustc integration
fragile-clang = { path = "crates/fragile-clang" }
fragile-rustc-driver = { path = "crates/fragile-rustc-driver" }
fragile-runtime = { path = "crates/fragile-runtime" }

# Parsing
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.23"

# Clang integration
# Using static linking to avoid runtime loading issues in tests
clang-sys = { version = "1.8", features = ["clang_17_0"] }

# Runtime support
libc = "0.2"

# LLVM backend
inkwell = { version = "0.7", features = ["llvm19-1", "llvm19-1-prefer-dynamic"] }

# Error handling & diagnostics
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
smol_str = "0.3"
rustc-hash = "2"
indexmap = "2"

# Testing
insta = "1"

[profile.release]
lto = true
codegen-units = 1
