[workspace]
resolver = "2"
members = [
    "crates/fragile-cli",
    "crates/fragile-common",
    "crates/fragile-clang",
    "crates/fragile-runtime",
    "crates/fragile-build",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
fragile-common = { path = "crates/fragile-common" }
fragile-clang = { path = "crates/fragile-clang" }
fragile-runtime = { path = "crates/fragile-runtime" }
fragile-build = { path = "crates/fragile-build" }

# Clang integration
clang-sys = { version = "1.8", features = ["clang_17_0"] }

# Runtime support
libc = "0.2"

# Error handling & diagnostics
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
smol_str = "0.3"
rustc-hash = "2"
indexmap = "2"

# Testing
insta = "1"

[profile.release]
lto = true
codegen-units = 1
