[package]
name = "fragile-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "fragile"
path = "src/main.rs"

[dependencies]
fragile-driver.workspace = true
fragile-common.workspace = true
fragile-build = { path = "../fragile-build" }
fragile-rustc-driver = { path = "../fragile-rustc-driver" }
fragile-clang = { path = "../fragile-clang" }
clap.workspace = true
miette.workspace = true
